# crawler

./: .env  .env.example  .gitignore  .vercelignore  BUILD_INTEGRATION.md  CONTRIBUTING.md  CRAWLER_FEATURES.md  Cargo.toml  LICENSE  README.md  REVIEW.md  VERCEL_DEPLOYMENT.md  deploy.sh  docs.code.copilot_merged.md  index.html  index.js  main.js  package-lock.json  package.json  preload.js  renderer.js  scraper_results.html  style.css  test-integration.sh  vercel.json
.Jules/: palette.md
.jules/: bolt.md
.vercel/: build.json  project.json
client/: package-lock.json
client/.vercel/: project.json
client/src/: App.css  App.js  UrlInputPanel.js
electron_app/: main.js  package-lock.json  package.json  renderer.js  urlToMarkdownConverter.js
public/: .gitignore  package.json  sw-test.html  sw.js
react_wasm_app/: .vercelignore  DEPLOYMENT.md  REVIEW.md  build-wasm.js  build.ps1  build.sh  setup.ps1  vercel.json
react_wasm_app/client/: package-lock.json  package.json
react_wasm_app/client/src/: App.css  App.js  App.test.js  ControlsPanel.js  PreviewPanel.js  UrlInputPanel.js
react_wasm_app/rust_backend/: .gitignore  Cargo.toml  Cargo.toml.bak
react_wasm_app/rust_backend/src/: lib.rs  lib_minimal.rs  lib_original.rs
rust_app/src/: main.rs
rust_backend/: Cargo.toml
rust_backend/src/: lib.rs
src/: App.css  App.js  App.test.js  Cargo.toml  ControlsPanel.js  PreviewPanel.js  StatusDisplay.js  UrlInputPanel.js  index.js  main.rs  markdownUtils.js
src/src/: lib.rs
url_to_markdown_converter/: Cargo.toml  README.md
(+1 files in other folders)
