[package]
name = "url_to_markdown_converter"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "native-tls"] }
iced = { version = "0.10.0", features = ["tokio", "advanced"] }
rfd = "0.12"
urlencoding = "2.1"
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }
url = "2.5.0"
